fix vertical alignment of input loader

--- a/app/assets/stylesheets/common/components/gifs.scss
+++ b/app/assets/stylesheets/common/components/gifs.scss
@@ -6,7 +6,7 @@
   &__input {
     position: relative;
 
-    > input {
+    > input[type="text"] {
       width: 100%;
       margin-bottom: 0;
     }
